--- a/src/components/tabs/browse/browseTabStyle.scss
+++ b/src/components/tabs/browse/browseTabStyle.scss
@@ -27,12 +27,15 @@
   }
   .browse_tab_divider {
     grid-template-columns: 1fr;
-    margin-right: 20px;
+    margin-right: 10px;
+    margin-left: 10px;
   }
 }
 
 @media screen and (max-width: map-get(styleVariables.$breakpoints, "phone")) {
   .add_exam_list_container {
     overflow: unset;
+    margin:auto;
+    text-align: center;
   }
 }
